# Globalroamer-AI-Observability

./: .Dockerfile  .env.example  .gitignore  CHANGELOG.md  DECISIONS.MD  MANIFEST.in  MakeFile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
bash_files/: cleanup_folders.sh  run_workflow.sh
etc/: globalroamer_ai_config.yml
globalroamer_ai/: analyze_main.py  ingest_main.py  report_main.py  streamlit_app.py
globalroamer_ai/ai/: ai_summary_service.py  embedding_service.py  retry_advisor.py  root_cause_service.py  similarity_search.py  vector_store.py
globalroamer_ai/core/: app_config.py  exceptions.py
globalroamer_ai/ingestion/: trace_chunker.py  trace_loader.py  trace_normalizer.py  trace_parser.py
globalroamer_ai/lib/: ai_summary_service.py  app_config.py  campaign_health.py  embedding_service.py  exceptions.py  report_writer.py  retry_advisor.py  root_cause_service.py  setup_logger.py  similarity_search.py  trace_chunker.py  trace_loader.py  trace_normalizer.py  trace_parser.py  vector_store.py
globalroamer_ai/models/: operational_models.py
globalroamer_ai/reports/: campaign_health.py  report_writer.py
globalroamer_ai/ui/: log_reader.py  pipeline_runner.py  result_loader.py  views.py
scripts/: cleanup_folders.ps1  run_workflow.ps1
tests/: test_trace_chunker.py  test_trace_normalizer.py  test_trace_parser.py
