[project]
name = "globalroamer-ai-observability"
version = "0.1.0"
description = "AI-assisted telecom roaming diagnostics and operational intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Valentin Sheboldaev" }
]
license = { text = "Proprietary" }

dependencies = [
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "openai>=1.35.0",
    "chromadb>=0.5.3",
    "tiktoken>=0.7.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "tenacity>=8.5.0",
    "python-json-logger>=2.0.7",
    "jinja2>=3.1.4",
    "markdown>=3.6",
    "aiofiles>=24.1.0",
    "orjson>=3.10.6",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "isort>=5.13.2",
]

api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
]

local-ai = [
    "sentence-transformers>=3.0.1",
]

[project.scripts]
globalroamer-ai-ingest = "globalroamer_ai.ingest_main:main"
globalroamer-ai-analyze = "globalroamer_ai.analyze_main:main"
globalroamer-ai-report = "globalroamer_ai.report_main:main"

[tool.setuptools.packages.find]
include = ["globalroamer_ai*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "var",
    "build",
    "dist",
]
